Update: IO in python

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -659,14 +659,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('_abc', '_ast', '_bisect', '_blake2', '_codecs', '_collections', '_csv', '_datetime', '_elementtree', '_functools', '_heapq', '_imp', '_io', '_locale', '_md5', '_operator', '_pickle', '_posixsubprocess', '_random', '_sha1', '_sha256', '_sha3', '_sha512', '_signal', '_socket', '_sre', '_stat', '_statistics', '_string', '_struct', '_symtable', '_thread', '_tracemalloc', '_warnings', '_weakref', 'array', 'atexit', 'binascii', 'builtins', 'cmath', 'errno', 'faulthandler', 'fcntl', 'gc', 'grp', 'itertools', 'marshal', 'math', 'posix', 'pwd', 'pyexpat', 'select', 'spwd', 'sys', 'syslog', 'time', 'unicodedata', 'xxsubtype', 'zlib')\n"
+      "('_abc', '_ast', '_bisect', '_blake2', '_codecs', '_collections', '_csv', '_datetime', '_elementtree', '_functools', '_heapq', '_imp', '_io', '_locale', '_md5', '_operator', '_pickle', '_posixsubprocess', '_random', '_sha1', '_sha256', '_sha3', '_sha512', '_signal', '_socket', '_sre', '_stat', '_statistics', '_string', '_struct', '_symtable', '_thread', '_tracemalloc', '_warnings', '_weakref', 'array', 'atexit', 'binascii', 'builtins', 'cmath', 'errno', 'faulthandler', 'fcntl', 'gc', 'grp', 'itertools', 'marshal', 'math', 'posix', 'pwd', 'pyexpat', 'select', 'spwd', 'sys', 'syslog', 'time', 'unicodedata', 'xxsubtype', 'zlib')\n",
+      "\n",
+      "Please wait a moment while I gather a list of all available modules...\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.8/pkgutil.py:92: UserWarning: The numpy.array_api submodule is still experimental. See NEP 47.\n",
+      "  __import__(info.name)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IPython             argparse            imghdr              retrying\n",
+      "PIL                 array               imp                 rlcompleter\n",
+      "__future__          ast                 importlib           runpy\n",
+      "_abc                asttokens           importlib_metadata  sched\n",
+      "_ast                asynchat            importlib_resources scipy\n",
+      "_asyncio            asyncio             inspect             seaborn\n",
+      "_bisect             asyncore            io                  secrets\n",
+      "_blake2             atexit              ipaddress           select\n",
+      "_bootlocale         audioop             ipykernel           selectors\n",
+      "_bz2                backcall            ipykernel_launcher  setuptools\n",
+      "_codecs             base64              itertools           shelve\n",
+      "_codecs_cn          bdb                 jedi                shlex\n",
+      "_codecs_hk          binascii            joblib              shutil\n",
+      "_codecs_iso2022     binhex              json                signal\n",
+      "_codecs_jp          bisect              jupyter             site\n",
+      "_codecs_kr          builtins            jupyter_client      sitecustomize\n",
+      "_codecs_tw          bz2                 jupyter_core        six\n",
+      "_collections        cProfile            keyword             sklearn\n",
+      "_collections_abc    cachecontrol        kiwisolver          smtpd\n",
+      "_compat_pickle      calendar            lib2to3             smtplib\n",
+      "_compression        certifi             linecache           sndhdr\n",
+      "_contextvars        cgi                 locale              socket\n",
+      "_crypt              cgitb               lockfile            socketserver\n",
+      "_csv                chardet             logging             spwd\n",
+      "_ctypes             chunk               lzma                sqlite3\n",
+      "_ctypes_test        cmath               mailbox             sre_compile\n",
+      "_curses             cmd                 mailcap             sre_constants\n",
+      "_curses_panel       code                marshal             sre_parse\n",
+      "_datetime           codecs              math                ssl\n",
+      "_dbm                codeop              matplotlib          stack_data\n",
+      "_decimal            collections         matplotlib_inline   stat\n",
+      "_dummy_thread       colorama            mimetypes           statistics\n",
+      "_elementtree        colorsys            mmap                string\n",
+      "_functools          comm                modulefinder        stringprep\n",
+      "_gdbm               compileall          multiprocessing     struct\n",
+      "_hashlib            concurrent          nest_asyncio        subprocess\n",
+      "_heapq              configparser        netrc               sunau\n",
+      "_imp                contextlib          nis                 symbol\n",
+      "_io                 contextlib2         nntplib             symtable\n",
+      "_json               contextvars         ntpath              sys\n",
+      "_locale             contourpy           nturl2path          sysconfig\n",
+      "_lsprof             copy                numbers             syslog\n",
+      "_lzma               copyreg             numpy               tabnanny\n",
+      "_markupbase         crypt               opcode              tarfile\n",
+      "_md5                csv                 operator            telnetlib\n",
+      "_multibytecodec     ctypes              optparse            tempfile\n",
+      "_multiprocessing    curses              os                  termios\n",
+      "_opcode             cycler              ossaudiodev         test\n",
+      "_operator           dataclasses         packaging           textwrap\n",
+      "_osx_support        datetime            pandas              this\n",
+      "_pickle             dateutil            parser              threading\n",
+      "_posixshmem         dbm                 parso               threadpoolctl\n",
+      "_posixsubprocess    debugpy             pathlib             time\n",
+      "_py_abc             decimal             pdb                 timeit\n",
+      "_pydecimal          decorator           pep517              token\n",
+      "_pyio               difflib             pexpect             tokenize\n",
+      "_queue              dis                 pickle              toml\n",
+      "_random             distlib             pickleshare         tornado\n",
+      "_sha1               distro              pickletools         trace\n",
+      "_sha256             distutils           pip                 traceback\n",
+      "_sha3               doctest             pipes               tracemalloc\n",
+      "_sha512             dummy_threading     pkg_resources       traitlets\n",
+      "_signal             easy_install        pkgutil             tty\n",
+      "_sitebuiltins       email               platform            turtle\n",
+      "_socket             encodings           platformdirs        types\n",
+      "_sqlite3            ensurepip           plistlib            typing\n",
+      "_sre                enum                poplib              typing_extensions\n",
+      "_ssl                errno               posix               tzdata\n",
+      "_stat               executing           posixpath           unicodedata\n",
+      "_statistics         faulthandler        pprint              unittest\n",
+      "_string             fcntl               profile             urllib\n",
+      "_strptime           filecmp             progress            urllib3\n",
+      "_struct             fileinput           prompt_toolkit      uu\n",
+      "_symtable           fnmatch             pstats              uuid\n",
+      "_sysconfigdata__linux_x86_64-linux-gnu fontTools           psutil              venv\n",
+      "_sysconfigdata__x86_64-linux-gnu formatter           pty                 warnings\n",
+      "_testbuffer         fractions           ptyprocess          wave\n",
+      "_testcapi           ftplib              pure_eval           wcwidth\n",
+      "_testimportmultiple functools           pwd                 weakref\n",
+      "_testinternalcapi   gc                  py_compile          webbrowser\n",
+      "_testmultiphase     genericpath         pyclbr              webencodings\n",
+      "_thread             getopt              pydoc               wsgiref\n",
+      "_threading_local    getpass             pydoc_data          xdrlib\n",
+      "_tracemalloc        gettext             pyexpat             xml\n",
+      "_uuid               glob                pygments            xmlrpc\n",
+      "_warnings           grp                 pylab               xxlimited\n",
+      "_weakref            gzip                pyparsing           xxsubtype\n",
+      "_weakrefset         hashlib             pytz                zipapp\n",
+      "_xxsubinterpreters  heapq               queue               zipfile\n",
+      "_xxtestfuzz         hmac                quopri              zipimport\n",
+      "abc                 html                random              zipp\n",
+      "aifc                html5lib            re                  zlib\n",
+      "antigravity         http                readline            zmq\n",
+      "app                 idna                reprlib             \n",
+      "appdirs             imaplib             resource            \n",
+      "\n",
+      "Enter any module name to get more help.  Or, type \"modules spam\" to search\n",
+      "for modules whose name or summary contain the string \"spam\".\n",
+      "\n"
      ]
     }
    ],
@@ -675,7 +791,8 @@
     "\n",
     "# List all built-in modules\n",
     "builtin_modules = sys.builtin_module_names\n",
-    "print(builtin_modules)"
+    "print(builtin_modules)\n",
+    "help('modules')"
    ]
   },
   {
@@ -892,6 +1009,51 @@
     "except TypeError as e:\n",
     "    print(f\"TypeError: {e}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning Python is fun!\n",
+      "Learning Python is fun!\n",
+      "I love Python!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import io\n",
+    "\n",
+    "new_text = \"Learning Python is fun!\"\n",
+    "with open(\"example.txt\", \"w\") as file:\n",
+    "    file.write(new_text)\n",
+    "    \n",
+    "with open(\"example.txt\", \"r\") as file:\n",
+    "    content = file.read()\n",
+    "    print(content)\n",
+    "\n",
+    "with open(\"example.txt\", \"a\") as file:\n",
+    "    file.write(\"\\nI love Python!\")\n",
+    "\n",
+    "# Move the cursor to the beginning of the file\n",
+    "# file.seek(0)\n",
+    "\n",
+    "# Reopen the file in read mode and read the updated content\n",
+    "with open(\"example.txt\", \"r\") as file:\n",
+    "    updated_content = file.read()\n",
+    "    print(updated_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
