Update: Os in python

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1050,6 +1050,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Directory: /home/wanyua/Dev/ML/Python-Machine-Learning-Tutorial/Python\n",
+      "Files and Directories: ['example.txt', 'python_basics.ipynb', 'app.py']\n",
+      "Created new directory: new_folder\n",
+      "Renamed directory to: renamed_folder\n",
+      "Removed directory: renamed_folder\n",
+      "Home Directory: /home/wanyua\n",
+      "MY_VARIABLE: my_value\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Get the current working directory\n",
+    "current_directory = os.getcwd()\n",
+    "print(f\"Current Directory: {current_directory}\")\n",
+    "\n",
+    "# List all files and directories in the current directory\n",
+    "files_and_directories = os.listdir(current_directory)\n",
+    "print(f\"Files and Directories: {files_and_directories}\")\n",
+    "\n",
+    "# Create a new directory\n",
+    "new_directory = \"new_folder\"\n",
+    "os.makedirs(new_directory, exist_ok=True)\n",
+    "print(f\"Created new directory: {new_directory}\")\n",
+    "\n",
+    "# Rename a directory\n",
+    "renamed_directory = \"renamed_folder\"\n",
+    "os.rename(new_directory, renamed_directory)\n",
+    "print(f\"Renamed directory to: {renamed_directory}\")\n",
+    "\n",
+    "# Remove a directory\n",
+    "os.rmdir(renamed_directory)\n",
+    "print(f\"Removed directory: {renamed_directory}\")\n",
+    "\n",
+    "# Get the value of an environment variable\n",
+    "home_directory = os.getenv(\"HOME\")\n",
+    "print(f\"Home Directory: {home_directory}\")\n",
+    "\n",
+    "# Set an environment variable\n",
+    "os.environ[\"MY_VARIABLE\"] = \"my_value\"\n",
+    "print(f\"MY_VARIABLE: {os.getenv('MY_VARIABLE')}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
