Update: Shutil module in python

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1103,6 +1103,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File copied successfully.\n",
+      "File moved successfully.\n",
+      "File removed successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import shutil\n",
+    "\n",
+    "# Copy a file\n",
+    "shutil.copy(\"example.txt\", \"example_copy.txt\")\n",
+    "print(\"File copied successfully.\")\n",
+    "\n",
+    "# Move a file\n",
+    "shutil.move(\"example_copy.txt\", \"example_moved.txt\")\n",
+    "print(\"File moved successfully.\")\n",
+    "\n",
+    "# Remove a file\n",
+    "os.remove(\"example_moved.txt\")\n",
+    "print(\"File removed successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
