Update: Shutil module in python

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1104,7 +1104,11 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1130,6 +1134,43 @@
     "# Remove a file\n",
     "os.remove(\"example_moved.txt\")\n",
     "print(\"File removed successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [1, 2, ['Changed', 4], 5]\n",
+      "Shallow copy: [1, 2, ['Changed', 4], 5]\n",
+      "Deep copy: [1, 2, [3, 4], 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "\n",
+    "# Original list\n",
+    "original_list = [1, 2, [3, 4], 5]\n",
+    "\n",
+    "# Shallow copy - modifications in the copied object can affect the original if it contains mutable objects.\n",
+    "\n",
+    "shallow_copy = copy.copy(original_list)\n",
+    "\n",
+    "# Deep copy - Changes in the copied object do not affect the original.\n",
+    "\n",
+    "deep_copy = copy.deepcopy(original_list)\n",
+    "\n",
+    "# Modify the original list\n",
+    "original_list[2][0] = 'Changed'\n",
+    "\n",
+    "print(\"Original list:\", original_list)  # Output: [1, 2, ['Changed', 4], 5]\n",
+    "print(\"Shallow copy:\", shallow_copy)    # Output: [1, 2, ['Changed', 4], 5]\n",
+    "print(\"Deep copy:\", deep_copy)          # Output: [1, 2, [3, 4], 5]"
    ]
   },
   {
