Update: zip and unzip files in python

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1178,6 +1178,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# !pip install send2trash\n",
+    "import send2trash\n",
+    "\n",
+    "# Send a file to the trash\n",
+    "send2trash.send2trash(\"example.txt\")\n",
+    "print(\"File sent to trash successfully.\")\n",
+    "\n",
+    "# Send a directory to the trash\n",
+    "send2trash.send2trash(\"new_folder\")\n",
+    "print(\"Directory sent to trash successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files zipped successfully.\n",
+      "Files unzipped successfully.\n",
+      "Extracted files: ['example.txt', 'example_moved.txt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import zipfile\n",
+    "import os\n",
+    "\n",
+    "new_file = open('example_moved.txt', 'w')\n",
+    "# Create a zip file\n",
+    "with zipfile.ZipFile('example.zip', 'w') as zipf:\n",
+    "    zipf.write('example.txt')\n",
+    "    zipf.write('example_moved.txt')\n",
+    "\n",
+    "print(\"Files zipped successfully.\")\n",
+    "\n",
+    "# Unzip the file\n",
+    "with zipfile.ZipFile('example.zip', 'r') as zipf:\n",
+    "    zipf.extractall('extracted_files')\n",
+    "\n",
+    "print(\"Files unzipped successfully.\")\n",
+    "\n",
+    "# List the contents of the extracted directory\n",
+    "extracted_files = os.listdir('extracted_files')\n",
+    "print(f\"Extracted files: {extracted_files}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
