Update: Numpy array

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1231,6 +1231,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array from list: [1 2 3 4 5]\n",
+      "Array with range of values: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47\n",
+      " 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71\n",
+      " 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95\n",
+      " 96 97 98 99]\n",
+      "Array with zeros:\n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "Array with ones:\n",
+      " [[1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]]\n",
+      "Array with random values:\n",
+      " [[0.03474705 0.08807901 0.18195069 0.24078443]\n",
+      " [0.04665149 0.37680615 0.89907458 0.15489738]\n",
+      " [0.1822712  0.68372607 0.73334293 0.55716633]\n",
+      " [0.93353574 0.58082469 0.72269176 0.15151848]]\n",
+      "Array after addition: [11 12 13 14 15]\n",
+      "Array after multiplication: [ 2  4  6  8 10]\n",
+      "Element at index 2: 3\n",
+      "Sliced array: [2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Create a NumPy array from a list\n",
+    "array_from_list = np.array([1, 2, 3, 4, 5])\n",
+    "print(\"Array from list:\", array_from_list)\n",
+    "\n",
+    "# Create a NumPy array with a range of values\n",
+    "array_range = np.arange(100)\n",
+    "print(\"Array with range of values:\", array_range)\n",
+    "\n",
+    "# Create a NumPy array with zeros\n",
+    "array_zeros = np.zeros((3, 3))\n",
+    "print(\"Array with zeros:\\n\", array_zeros)\n",
+    "\n",
+    "# Create a NumPy array with ones\n",
+    "array_ones = np.ones((2, 4))\n",
+    "print(\"Array with ones:\\n\", array_ones)\n",
+    "\n",
+    "# Create a NumPy array with random values\n",
+    "array_random = np.random.random((4, 4))\n",
+    "print(\"Array with random values:\\n\", array_random)\n",
+    "\n",
+    "# Perform basic arithmetic operations on NumPy arrays\n",
+    "array_sum = array_from_list + 10\n",
+    "print(\"Array after addition:\", array_sum)\n",
+    "\n",
+    "array_product = array_from_list * 2\n",
+    "print(\"Array after multiplication:\", array_product)\n",
+    "\n",
+    "# Access elements of a NumPy array\n",
+    "element = array_from_list[2]\n",
+    "print(\"Element at index 2:\", element)\n",
+    "\n",
+    "# Slicing a NumPy array\n",
+    "array_slice = array_from_list[1:4]\n",
+    "print(\"Sliced array:\", array_slice)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
