Update: Numpy array

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1239,11 +1239,7 @@
      "output_type": "stream",
      "text": [
       "Array from list: [1 2 3 4 5]\n",
-      "Array with range of values: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
-      " 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47\n",
-      " 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71\n",
-      " 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95\n",
-      " 96 97 98 99]\n",
+      "Array with range of values: [0 1 2 3 4 5 6 7 8]\n",
       "Array with zeros:\n",
       " [[0. 0. 0.]\n",
       " [0. 0. 0.]\n",
@@ -1252,10 +1248,10 @@
       " [[1. 1. 1. 1.]\n",
       " [1. 1. 1. 1.]]\n",
       "Array with random values:\n",
-      " [[0.03474705 0.08807901 0.18195069 0.24078443]\n",
-      " [0.04665149 0.37680615 0.89907458 0.15489738]\n",
-      " [0.1822712  0.68372607 0.73334293 0.55716633]\n",
-      " [0.93353574 0.58082469 0.72269176 0.15151848]]\n",
+      " [[0.45037838 0.04657062 0.21650479 0.62893839]\n",
+      " [0.45737238 0.37754599 0.12188324 0.77510976]\n",
+      " [0.69889786 0.23656815 0.6579891  0.90588845]\n",
+      " [0.81050128 0.81018526 0.65894468 0.48645593]]\n",
       "Array after addition: [11 12 13 14 15]\n",
       "Array after multiplication: [ 2  4  6  8 10]\n",
       "Element at index 2: 3\n",
@@ -1271,7 +1267,7 @@
     "print(\"Array from list:\", array_from_list)\n",
     "\n",
     "# Create a NumPy array with a range of values\n",
-    "array_range = np.arange(100)\n",
+    "array_range = np.arange(9)\n",
     "print(\"Array with range of values:\", array_range)\n",
     "\n",
     "# Create a NumPy array with zeros\n",
@@ -1304,10 +1300,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Double marks: [24.2 26.4 28.6 30.8 33. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "marks = [12.1, 13.2, 14.3, 15.4, 16.5]\n",
+    "np_marks = np.array(marks)\n",
+    "double_marks = np_marks * 2\n",
+    "print(f\"Double marks: {double_marks}\")"
+   ]
   },
   {
    "cell_type": "code",
