Update: Numpy array

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1230,6 +1230,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Numpy arrays"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
@@ -1316,6 +1323,73 @@
     "np_marks = np.array(marks)\n",
     "double_marks = np_marks * 2\n",
     "print(f\"Double marks: {double_marks}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1-Dimensional Numpy arrays Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of elements: 150\n",
+      "Mean of elements: 30.0\n",
+      "Standard deviation of elements: 14.142135623730951\n",
+      "Minimum element: 10\n",
+      "Maximum element: 50\n",
+      "Index of minimum element: 0\n",
+      "Index of maximum element: 4\n",
+      "The one dimensional array is:  [10 20 30 40 50]\n",
+      "Cumulative sum of elements: [ 10  30  60 100 150]\n",
+      "Sorted array: [10 20 30 40 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a 1-dimensional NumPy array\n",
+    "array_1d = np.array([10, 20, 30, 40, 50])\n",
+    "\n",
+    "# Sum of all elements\n",
+    "sum_elements = np.sum(array_1d)\n",
+    "print(f\"Sum of elements: {sum_elements}\")\n",
+    "\n",
+    "# Mean of all elements\n",
+    "mean_elements = np.mean(array_1d)\n",
+    "print(f\"Mean of elements: {mean_elements}\")\n",
+    "\n",
+    "# Standard deviation of all elements\n",
+    "std_deviation = np.std(array_1d)\n",
+    "print(f\"Standard deviation of elements: {std_deviation}\")\n",
+    "\n",
+    "# Minimum and maximum elements\n",
+    "min_element = np.min(array_1d)\n",
+    "max_element = np.max(array_1d)\n",
+    "print(f\"Minimum element: {min_element}\")\n",
+    "print(f\"Maximum element: {max_element}\")\n",
+    "\n",
+    "# Index of the minimum and maximum elements\n",
+    "min_index = np.argmin(array_1d) # returns the indices of the minimum values along an axis\n",
+    "max_index = np.argmax(array_1d) # returns the indices of the maximum values along an axis\n",
+    "print(f\"Index of minimum element: {min_index}\")\n",
+    "print(f\"Index of maximum element: {max_index}\")\n",
+    "\n",
+    "# Cumulative sum of elements\n",
+    "cumulative_sum = np.cumsum(array_1d)\n",
+    "print(\"The one dimensional array is: \", array_1d)\n",
+    "print(f\"Cumulative sum of elements: {cumulative_sum}\")\n",
+    "\n",
+    "# Sorting the array\n",
+    "sorted_array = np.sort(array_1d)\n",
+    "print(f\"Sorted array: {sorted_array}\")"
    ]
   },
   {
