Update: Numpy arrays math functions

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1394,6 +1394,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Square root of elements: [3.16227766 4.47213595 5.47722558 6.32455532 7.07106781]\n",
+      "Exponential of elements: [2.20264658e+04 4.85165195e+08 1.06864746e+13 2.35385267e+17\n",
+      " 5.18470553e+21]\n",
+      "Natural logarithm of elements: [2.30258509 2.99573227 3.40119738 3.68887945 3.91202301]\n",
+      "Sine of elements: [-0.54402111  0.91294525 -0.98803162  0.74511316 -0.26237485]\n",
+      "Cosine of elements: [-0.83907153  0.40808206  0.15425145 -0.66693806  0.96496603]\n",
+      "Tangent of elements: [ 0.64836083  2.23716094 -6.4053312  -1.11721493 -0.27190061]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Square root of each element\n",
+    "sqrt_array = np.sqrt(array_1d)\n",
+    "print(f\"Square root of elements: {sqrt_array}\")\n",
+    "\n",
+    "# Exponential (e^x) of each element\n",
+    "exp_array = np.exp(array_1d)\n",
+    "print(f\"Exponential of elements: {exp_array}\")\n",
+    "\n",
+    "# Natural logarithm (ln) of each element\n",
+    "log_array = np.log(array_1d)\n",
+    "print(f\"Natural logarithm of elements: {log_array}\")\n",
+    "\n",
+    "# Sine of each element (assuming elements are in radians)\n",
+    "sin_array = np.sin(array_1d)\n",
+    "print(f\"Sine of elements: {sin_array}\")\n",
+    "\n",
+    "# Cosine of each element (assuming elements are in radians)\n",
+    "cos_array = np.cos(array_1d)\n",
+    "print(f\"Cosine of elements: {cos_array}\")\n",
+    "\n",
+    "# Tangent of each element (assuming elements are in radians)\n",
+    "tan_array = np.tan(array_1d)\n",
+    "print(f\"Tangent of elements: {tan_array}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
