Update: Numpy arrays math functions

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1438,6 +1438,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating N-Dimensional numpy arrays\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]]\n",
+      "[[0.86795065 0.68732251 0.34615755 0.47104336 0.67372534 0.71709549]\n",
+      " [0.01394146 0.10014145 0.79199565 0.03810453 0.91228582 0.42007169]]\n",
+      "Cat marks: [89 10 65 75 90 27 10  4 31 56]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(x)\n",
+    "\n",
+    "ones_np = np.ones((3, 5))\n",
+    "print(ones_np)\n",
+    "\n",
+    "random_np = np.random.random((2, 6)) # Create a 2x6 array with random values between 0 and 1\n",
+    "print(random_np)\n",
+    "\n",
+    "cat_marks = np.random.randint(0, 100, 10) # Generate 10 random integers between 0 and 100   \n",
+    "print(f\"Cat marks: {cat_marks}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
