--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1458,9 +1458,9 @@
       "[[1. 1. 1. 1. 1.]\n",
       " [1. 1. 1. 1. 1.]\n",
       " [1. 1. 1. 1. 1.]]\n",
-      "[[0.86795065 0.68732251 0.34615755 0.47104336 0.67372534 0.71709549]\n",
-      " [0.01394146 0.10014145 0.79199565 0.03810453 0.91228582 0.42007169]]\n",
-      "Cat marks: [89 10 65 75 90 27 10  4 31 56]\n"
+      "[[0.64096872 0.1000776  0.52787721 0.0041767  0.68893038 0.10214932]\n",
+      " [0.19361158 0.89380118 0.68775575 0.79303401 0.04258087 0.31439545]]\n",
+      "Cat marks: [99 58 80 89 58 31 67 68 90 61]\n"
      ]
     }
    ],
@@ -1474,8 +1474,96 @@
     "random_np = np.random.random((2, 6)) # Create a 2x6 array with random values between 0 and 1\n",
     "print(random_np)\n",
     "\n",
-    "cat_marks = np.random.randint(0, 100, 10) # Generate 10 random integers between 0 and 100   \n",
+    "cat_marks = np.random.randint(30, 100, 10) # Generate 10 random integers between 0 and 100   \n",
     "print(f\"Cat marks: {cat_marks}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of x and y: [[ 66  35 124]\n",
+      " [ 24  36  26]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[23,33,34],[1, 2, 23]])\n",
+    "y = np.array([[43,2,90],[23, 34, 3]])\n",
+    "print(f\"Sum of x and y: {x + y}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dot product of x and y:\n",
+      "[[4115 1753]\n",
+      " [2117  160]]\n",
+      "Cross product of vector_a and vector_b: [-3  6 -3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dot product of two arrays\n",
+    "dot_product = np.dot(x, y.T)  # Transpose y to match the dimensions\n",
+    "print(f\"Dot product of x and y:\\n{dot_product}\")\n",
+    "\n",
+    "# Cross product of two arrays\n",
+    "# Note: Cross product is only defined for 3-dimensional vectors\n",
+    "vector_a = np.array([1, 2, 3])\n",
+    "vector_b = np.array([4, 5, 6])\n",
+    "cross_product = np.cross(vector_a, vector_b)\n",
+    "print(f\"Cross product of vector_a and vector_b: {cross_product}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element at row 1, column 2: 6\n",
+      "Row at index 1: [4 5 6]\n",
+      "Column at index 2: [3 6 9]\n",
+      "Submatrix from rows 0 to 1 and columns 1 to 2:\n",
+      "[[2 3]\n",
+      " [5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accessing elements in a 2D NumPy array\n",
+    "matrix = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "# Access a specific element\n",
+    "element = matrix[1, 2]  # Access the element at row index 1 and column index 2\n",
+    "print(f\"Element at row 1, column 2: {element}\")\n",
+    "\n",
+    "# Access a specific row\n",
+    "row = matrix[1, :]  # Access the entire row at index 1\n",
+    "print(f\"Row at index 1: {row}\")\n",
+    "\n",
+    "# Access a specific column\n",
+    "column = matrix[:, 2]  # Access the entire column at index 2\n",
+    "print(f\"Column at index 2: {column}\")\n",
+    "\n",
+    "# Access a submatrix\n",
+    "submatrix = matrix[0:2, 1:3]  # Access the submatrix from row indices 0 to 1 and column indices 1 to 2\n",
+    "print(f\"Submatrix from rows 0 to 1 and columns 1 to 2:\\n{submatrix}\")"
    ]
   },
   {
