Update: Numpy arrays

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1567,6 +1567,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reshape an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_data = np.array([1,2,3,4,5,6])\n",
+    "reshaped_data = new_data.reshape(2,3)\n",
+    "print(reshaped_data)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
