Update: Numpy arrays

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1595,6 +1595,179 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[46 69 37 35 47 65 60 52 38 38 57 54 38 35 44 66 49 49 43 58 35 60 37 54\n",
+      " 45 48 57 73 64 75 68 61 49 49 70 51 71 60 72 41 36 75 63 59]\n",
+      "[[46 69 37 35 47 65 60 52 38 38 57]\n",
+      " [54 38 35 44 66 49 49 43 58 35 60]\n",
+      " [37 54 45 48 57 73 64 75 68 61 49]\n",
+      " [49 70 51 71 60 72 41 36 75 63 59]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = np.random.randint(34, 78, 44)\n",
+    "print(t)\n",
+    "reshaped_t = t.reshape(4,11)\n",
+    "print(reshaped_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1. 1. 1. 1.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "r= np.ones((33, 3,8)) # 33 is no. of arrays, 3 = rows, 8 = columns\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
