Update: Pandas series

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1104,11 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1764,6 +1760,77 @@
    "source": [
     "r= np.ones((33, 3,8)) # 33 is no. of arrays, 3 = rows, 8 = columns\n",
     "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pandas Series from list:\n",
+      "0    10\n",
+      "1    20\n",
+      "2    30\n",
+      "3    40\n",
+      "4    50\n",
+      "dtype: int64\n",
+      "\n",
+      "Pandas Series from dictionary:\n",
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "dtype: int64\n",
+      "\n",
+      "Element at index 2: 30\n",
+      "Element with index 'b': 2\n",
+      "\n",
+      "Series after addition:\n",
+      "0    15\n",
+      "1    25\n",
+      "2    35\n",
+      "3    45\n",
+      "4    55\n",
+      "dtype: int64\n",
+      "\n",
+      "Series after multiplication:\n",
+      "0     20\n",
+      "1     40\n",
+      "2     60\n",
+      "3     80\n",
+      "4    100\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# Pandas series -  one-dimensional labeled array that can hold data of any type (integers, floats, strings, etc.). It is similar to a column in a spreadsheet or a list but with an index attached to each value.\n",
+    "# Creating a Pandas Series from a list\n",
+    "data = [10, 20, 30, 40, 50]\n",
+    "series = pd.Series(data)\n",
+    "print(\"Pandas Series from list:\")\n",
+    "print(series)\n",
+    "\n",
+    "# Creating a Pandas Series from a dictionary\n",
+    "data_dict = {'a': 1, 'b': 2, 'c': 3}\n",
+    "series_dict = pd.Series(data_dict)\n",
+    "print(\"\\nPandas Series from dictionary:\")\n",
+    "print(series_dict)\n",
+    "\n",
+    "# Accessing elements in a Pandas Series\n",
+    "print(\"\\nElement at index 2:\", series[2])\n",
+    "print(\"Element with index 'b':\", series_dict['b'])\n",
+    "\n",
+    "# Performing operations on a Pandas Series\n",
+    "print(\"\\nSeries after addition:\")\n",
+    "print(series + 5)\n",
+    "\n",
+    "print(\"\\nSeries after multiplication:\")\n",
+    "print(series * 2)"
    ]
   },
   {
