Update: Pandas Dataframe

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1834,6 +1834,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Pandas DataFrame is a two-dimensional, labeled data structure similar to a table in a database, a spreadsheet, or a dictionary of Series objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Colors  Degrees  Numbers\n",
+      "1     red       12        1\n",
+      "2    blue       23        2\n",
+      "3   green       34        3\n",
+      "4  yellow       45        4\n",
+      "5   black       56        5\n"
+     ]
+    }
+   ],
+   "source": [
+    "colors = ['red', 'blue', 'green', 'yellow', 'black']\n",
+    "degrees = [12, 23, 34, 45, 56]\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "\n",
+    "# Create a Pandas DataFrame from the lists above\n",
+    "new_df = pd.DataFrame({'Colors': colors, 'Degrees': degrees, 'Numbers': numbers},\n",
+    "                      index=range(1, 6))\n",
+    "print(new_df)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
